# temporal-worker-k8s-operator

./: .gitignore  .licenserc.yaml  .trivyignore  .woke.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
.github/: integration-trivy-config.yaml
.github/workflows/: ci.yaml  integration_test.yaml  promote_charm.yaml  publish_charm.yaml  test.yaml  test_and_publish_charm.yaml  tiobe-scan.yaml
resource_sample/: Makefile  config.yaml  invalid.env  pyproject.toml
resource_sample/resource_sample/activities/: activity1.py  activity2.py
resource_sample/resource_sample/common/: messages.py
resource_sample/resource_sample/workflows/: workflow1.py  workflow2.py
resource_sample_py/: Makefile  README.md  pyproject.toml  rockcraft.yaml  sample-rockcraft.yaml
resource_sample_py/resource_sample/: worker.py
resource_sample_py/scripts/: start-worker.sh
sample_files/: config.yaml
src/: charm.py  environment_processors.py  literals.py  secret_processors.py  vault_client.py
src/actions/: __init__.py  activities.py  dependencies.py  workflows.py
src/grafana_dashboards/: temporal-monitoring.json.tmpl
src/relations/: __init__.py  postgresql.py  vault.py
src/resources/: __init__.py  check_status.py  sentry_interceptor.py  worker-dependencies.txt  worker.py
src/vault/: __init__.py  actions.py  client.py
tests/: conftest.py
tests/integration/: __init__.py  conftest.py  helpers.py  test_charm.py  test_postgres_db.py  test_scaling.py  test_upgrades.py  (+2 more)
(+20 files in other folders)
