[tool.poetry]
name = "python-samples"
version = "1.1.0"
description = ""
authors = ["ali-kelkawi <ali.kelkawi@canonical.com>"]
packages = [
    { include = "**/*.py", from = "."  }
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
temporal-lib-py = "^1.1.0"
python-json-logger = "^2.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
isort = "^5.10.1"
poethepoet = "^0.16.2"
pytest-asyncio = "^0.19.0"
mypy = "^0.971"

[tool.poe.tasks]
format = [{cmd = "black ."}, {cmd = "isort ."}]
lint = [{cmd = "black --check ."}, {cmd = "isort --check-only ."}, {ref = "lint-types" }]
lint-types = "mypy --check-untyped-defs ."
test = "pytest"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.mypy]
ignore_missing_imports = true
